--- a/ngunnawal.css
+++ b/ngunnawal.css
@@ -1,13 +1,13 @@
-h1 {
-    color: #2a382b;
-    text-align: center;
-}
-
 body {
     background-color: #cff2ec;
 }
 
 .banner > img {
+    align-content: center;
+    margin-top: 68px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     max-height: 100%;
     max-width: 100%;
     height: auto;
@@ -32,6 +32,11 @@ body {
     grid-column-end: 3;
 }
 
+.full-width > h1 {
+    color: #2a382b;
+    text-align: center;
+}
+
 .main-content {
     grid-row-start: 2;
     grid-row-end: 4;
@@ -40,6 +45,9 @@ body {
 .navbar {
     overflow: hidden;
     background-color: #ffffff;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 /* logo */
@@ -60,4 +68,45 @@ body {
 
 .navbar > a:hover {
     background-color: #bebebe;
+}
+
+.navbar .search-container {
+    float: right;
+}
+
+/* Style the search box inside the navigation bar */
+.navbar input[type=text] {
+    float: right;
+    padding: 1em;
+    border: none;
+    margin-top: 14px;
+    margin-right: 0px;
+    font-size: 14px;
+}
+
+.navbar .search-container button {
+    float: right;
+    padding: 1em;
+    margin-top: 14px;
+    margin-right: 20px;
+    background: #ddd;
+    font-size: 11px;
+    border: none;
+    cursor: pointer;
+}
+
+.navbar .search-container button:hover {
+    background: #ccc;
+}
+
+.footer {
+    overflow: hidden;
+    background-color: #ffffff;
+    width: 100%;
+    bottom: 0;
+}
+
+.footer > p {
+    float: left;
+    padding-left: 1em;
 }
