--- a/ngunnawal.css
+++ b/ngunnawal.css
@@ -25,6 +25,7 @@ body {
 /*the div tags that are direct children of the grid-container*/
 .grid-container > div {
     background-color: rgba(255, 255, 255, 0.5);
+    padding:1em;
 }
 
 .full-width {
@@ -40,6 +41,11 @@ body {
 .main-content {
     grid-row-start: 2;
     grid-row-end: 4;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
 .navbar {
