--- a/ngunnawal.css
+++ b/ngunnawal.css
@@ -1,11 +1,13 @@
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     background-color: #cff2ec;
 }
+
+/* BANNER */
 
 .banner > img {
     align-content: center;
@@ -19,7 +21,9 @@ body {
     object-fit: cover;
 }
 
-/* period (.) means it is a class */
+/* DISPLAY GRID */
+
+/*period (.) means it is a class*/
 .grid-container {
     display: grid;
     grid-template-columns: auto auto; /*2 column grid, auto resize for width*/
@@ -48,6 +52,8 @@ body {
     grid-row-end: 4;
 }
 
+/* NAVBAR */
+
 .navbar {
     overflow: hidden;
     background-color: #ffffff;
@@ -56,7 +62,7 @@ body {
     width: 100%;
 }
 
-/* logo */
+/*navbar logo*/
 .navbar > img {
     float: left;
     text-align: center;
@@ -104,6 +110,8 @@ body {
 .navbar .search-container button:hover {
     background: #ccc;
 }
+
+/* FOOTER */
 
 .footer {
     overflow: hidden;
