--- a/ngunnawal.css
+++ b/ngunnawal.css
@@ -36,7 +36,7 @@ body {
     padding:1em;
 }
 
-.grid-container > p > img {
+.centre-img {
     display: block;
     margin-left: auto;
     margin-right: auto;
